testdata/baselines/reference/submodule/conformance/jsdocParseMatchingBackticks.errors.txt
jsdocParseMatchingBackticks.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
jsdocParseMatchingBackticks.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.
jsdocParseMatchingBackticks.js(7,19): error TS8010: Type annotations can only be used in TypeScript files.
jsdocParseMatchingBackticks.js(8,21): error TS8010: Type annotations can only be used in TypeScript files.
jsdocParseMatchingBackticks.js(9,24): error TS8010: Type annotations can only be used in TypeScript files.
jsdocParseMatchingBackticks.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.


==== jsdocParseMatchingBackticks.js (6 errors) ====
    /**
     * `@param` initial at-param is OK in title comment
     * @param {string} x hi there `@param`
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {string} y hi there `@ * param
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     *                   this is the margin
     *                   so we'll drop everything before it
     `@param` @param {string} z hello???
                      ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * `@param` @param {string} alpha hello???
                        ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * `@ * param` @param {string} beta hello???
                           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {string} gamma
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function f(x, y, z, alpha, beta, gamma) {
        return x + y + z + alpha + beta + gamma
    }
    